[package]
name = "collateralized-debt"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "collateralized_debt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
bytemuck = "1.13.1"
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
solana-program = "=1.16.14"
pyth-sdk-solana = "0.8.0"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
