[package]
name = "ousia-burn-and-mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ousia_burn_and_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"
bytemuck = "1.13.1"
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
solana-program = "=1.14.17"
blake3 = { version = "=1.3.1", features = ["digest", "traits-preview"] }

